# podcast-downloader

./: .gitignore  CLAUDE.md  README.md  TODO.md  eslint.config.js  index.html  lefthook.yml  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 01-requirements.md  02-architecture.md  03-data-design.md  04-ui-design.md  05-development-guide.md  data-design.md
docs/decisions/: README.md  adr-001-app-framework.md  adr-002-frontend-framework.md  adr-003-database.md  adr-004-apple-podcasts-rss.md  adr-005-new-episode-detection.md  adr-006-package-manager.md  adr-007-windows-build.md  adr-008-frontend-state-management.md  adr-009-frontend-libraries.md  adr-010-data-simplification.md  adr-011-adr-file-splitting.md  adr-012-commands-testability.md  adr-013-remove-duration.md  adr-014-no-visual-regression-testing.md  adr-015-simplify-default-replacements.md  adr-016-remove-episode-sections.md  adr-017-change-app-identifier.md  adr-018-app-icon-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_drop_duration.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: download.rs  episode.rs  mod.rs  podcast.rs  settings.rs  test_helpers.rs
src-tauri/src/db/: episode.rs  mod.rs  podcast.rs
src-tauri/src/models/: episode.rs  mod.rs  podcast.rs  settings.rs
src-tauri/src/services/: apple_podcasts.rs  downloader.rs  filename.rs  mod.rs  real.rs  rss.rs  traits.rs
(+38 files in other folders)
